chore: fix line-break in footer email

--- a/src/styles/components/richtext.css
+++ b/src/styles/components/richtext.css
@@ -15,7 +15,6 @@
   }
 
   & a {
-    overflow-wrap: anywhere;
     color: var(--text-color);
 
     &:hover,
